--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "pandaspg"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Adolfo Jimenez", email="adolfoj@protonmail.com" },
 ]
